tests/traci/get_variable/ArealDetector/errors/UnknownAD/errors.traci
Error: Answered with error to command 0xad: Lane area detector 'xxx' is not known
